--- a/src/components/global-styles/global-styles.scss
+++ b/src/components/global-styles/global-styles.scss
@@ -5,6 +5,7 @@
     --black: #000;
     --white: #fff;
     --text-color: #333;
+    --primary-color: #0984e3;
 
     // Font define
     --font-family: 'Poppins', sans-serif;
