--- a/src/components/global-styles/global-styles.scss
+++ b/src/components/global-styles/global-styles.scss
@@ -6,6 +6,7 @@
     --white: #fff;
     --text-color: #333;
     --primary-color: #0984e3;
+    --disabled-color: #f5f5f5;
 
     // Font define
     --font-family: 'Poppins', sans-serif;
