--- a/src/components/common/input/input.scss
+++ b/src/components/common/input/input.scss
@@ -3,10 +3,10 @@
     padding: 4px 3px;
 }
 
-.input__small{
-    padding: 2px 1px;
+.input__medium{
+    padding: 3px 30px;
 }
 
 .input__large{
-    padding: 5px 4px;
+    padding: 5px 50px;
 }
