--- a/src/components/global-styles/global-styles.scss
+++ b/src/components/global-styles/global-styles.scss
@@ -5,7 +5,7 @@
     --black: #000;
     --white: #fff;
     --text-color: #333;
-    --primary-color: #0984e3;
+    --primary-color: #1677ff;
     --disabled-color: #f5f5f5;
 
     // Font define
