change route home to overview

--- a/src/components/side-menu/side-menu.scss
+++ b/src/components/side-menu/side-menu.scss
@@ -1,5 +1,7 @@
 .side__menu-container {
     border-right: 1px solid var(--text-color);
+    display: flex;
+    flex-direction: column;
 
     .ant-menu {
         background-color: #fff;
@@ -9,6 +11,26 @@
             &:hover {
                 background-color: var(--primary-color) !important;
             }
+        }
+    }
+
+    .log__out-section {
+        padding-left: 24px;
+        width: calc(100% - 8px);
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        margin-bottom: 35px;
+        cursor: pointer;
+        border-radius: 8px;
+        margin: 0px 4px 35px;
+        height: 40px;
+        transition: 0.15s all ease-in-out;
+        font-size: 15px;
+
+        &:hover {
+            background-color: var(--primary-color);
+            color: #fff;
         }
     }
 }
