--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -16,5 +16,7 @@
     .page__content {
         flex: 1;
         height: 100%;
+        padding: 15px 28px 0px;
+        background-color: #f3f0f0;
     }
 }
