--- a/src/components/side-menu/side-menu.scss
+++ b/src/components/side-menu/side-menu.scss
@@ -3,6 +3,13 @@
     flex-direction: column;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.05);
 
+    .side__menu-logo {
+        width: 150px;
+        height: 150px;
+        object-fit: cover;
+        margin: 32px auto;
+    }
+
     .ant-menu {
         background-color: #fff;
         color: var(--text-color);
