--- a/src/pages/employees/employees-page.scss
+++ b/src/pages/employees/employees-page.scss
@@ -1,3 +1,8 @@
 .employees__container {
     
+    .employee__avatar {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+    }
 }
