--- a/src/components/side-menu/side-menu.scss
+++ b/src/components/side-menu/side-menu.scss
@@ -27,11 +27,10 @@
         display: flex;
         align-items: center;
         gap: 12px;
-        margin-bottom: 35px;
         cursor: pointer;
         border-radius: 8px;
         margin: 0px 4px 35px;
-        height: 40px;
+        min-height: 40px;
         transition: 0.15s all ease-in-out;
         font-size: 15px;
 
