--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,11 @@
+.overview-wrapper {
+    height: calc(100vh - 105px);
+}
+
 .overview__heading{
     text-transform: uppercase;
     font-weight: 600;
+    margin-bottom: 12px;
 }
 .overview__content{
     display: flex;
@@ -8,8 +13,42 @@
 }
 .overview__content-avatar{
     width: 30%;
-   
-   
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 2px -1px 10px -1px rgba(0,0,0,0.75);
+    border-radius: 4px;
+    .overview__inp-change-avatar {
+        position: absolute;
+        inset: 0;
+        cursor: pointer;
+        opacity: 0;
+        z-index: 3;
+    }
+    .avatar__img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .avatar__camera {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: clamp(30px, 3vw, 42px);
+        z-index: 2;
+        opacity: 0;
+        transition: 0.15s all ease-in-out;
+        background: rgba(0,0,0,0.75);
+        color: #fff;
+    }
+    &:hover {
+        .avatar__camera {
+            opacity: 1;
+        }
+    }
 }
 .overview__content-detail{
     width: 65%;
