--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -85,8 +85,10 @@
 }
 .overview__edit{
     display: flex;
-    justify-content: flex-end   ;
-    > *{
-        margin-left: 5px;
+    justify-content: flex-end;
+    gap: 5px;
+    
+    .button__default {
+        width: calc(100% / 3 - 10px);
     }
 }
