--- a/src/pages/employees/employees-page.scss
+++ b/src/pages/employees/employees-page.scss
@@ -6,3 +6,62 @@
         border-radius: 50%;
     }
 }
+
+.employees__action {
+    display: flex;
+    justify-content: flex-end;
+    gap: 12px;
+    margin-bottom: 20px;
+  
+    .employees__search-btn {
+      .button__text {
+        margin-right: 4px;
+      }
+    }
+  }
+  .action__edit {
+    margin-bottom: 13px;
+    div {
+      display: inline-block;
+      margin-left: 8px;
+    }
+  }
+  .action__delete {
+    margin-bottom: 13px 0;
+    div {
+      display: inline-block;
+      margin-left: 8px;
+    }
+  }
+  
+  .employees__row-action {
+    text-align: right;
+  }
+  
+  .action__delete, .action__edit {
+    transition: 0.12s all ease-in-out;
+    cursor: pointer;
+  
+    &:hover {
+      color: var(--primary-color);
+    }
+  }
+  
+  .employees__total-emp {
+    color: var(--primary-color);
+    font-weight: 500;
+  }
+  
+  .add__employees-modal {
+    .add__employees-label {
+      margin-bottom: 6px;
+      font-weight: 500;
+    }
+    .custom__input-container {
+      margin-bottom: 20px;
+    }
+  }
+  
+  .manipulated__action {
+    padding: 10px;
+  }
