--- a/src/pages/employees/employees-page.scss
+++ b/src/pages/employees/employees-page.scss
@@ -6,3 +6,29 @@
         border-radius: 50%;
     }
 }
+
+.download__btn {
+    display: inline-flex;
+    margin-bottom: 20px;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    padding: 5px 12px;
+    border-radius: 4px;
+    color: #fff;
+    background-color: var(--primary-color);
+    border: 1px solid transparent;
+    transition: 0.12s all ease-in-out;
+
+    &:hover {
+        border-color: var(--primary-color);
+        background-color: transparent;
+        color: var(--primary-color);
+    }
+}
+
+.employess__section {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
