--- a/src/pages/employees/employees-page.scss
+++ b/src/pages/employees/employees-page.scss
@@ -7,25 +7,52 @@
     }
 }
 
-.download__btn {
-    display: inline-flex;
-    margin-bottom: 20px;
+.file__actions {
+    display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 8px;
-    padding: 5px 12px;
-    border-radius: 4px;
-    color: #fff;
-    background-color: var(--primary-color);
-    border: 1px solid transparent;
-    transition: 0.12s all ease-in-out;
+    gap: 12px;
+    .upload__btn, .download__btn {
+        display: inline-flex;
+        margin-bottom: 20px;
+        align-items: center;
+        justify-content: center;
+        gap: 8px;
+        padding: 5px 12px;
+        border-radius: 4px;
+        color: #fff;
+        background-color: var(--primary-color);
+        border: 1px solid transparent;
+        transition: 0.12s all ease-in-out;
+    
+        &:hover {
+            border-color: var(--primary-color);
+            background-color: transparent;
+            color: var(--primary-color);
+        }
+    }
 
-    &:hover {
+    .upload__btn {
+        background: transparent;
         border-color: var(--primary-color);
-        background-color: transparent;
         color: var(--primary-color);
+        position: relative;
+        cursor: pointer;
+        input {
+            position: absolute;
+            inset: 0;
+            cursor: pointer;
+            opacity: 0;            
+        }
+
+        &:hover {
+            border-color: transparent;
+            background-color: var(--primary-color);
+            color: #fff;
+        }
     }
 }
+
+
 
 .employess__section {
     display: flex;
