change action to icon

--- a/src/pages/department/department.scss
+++ b/src/pages/department/department.scss
@@ -55,4 +55,11 @@
 
 .manipulated__action {
   padding: 10px;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+
+  .action__edit {
+    margin: 0;
+  }
 }
