--- a/src/pages/benefit/benefit-page.scss
+++ b/src/pages/benefit/benefit-page.scss
@@ -1,104 +1,106 @@
-.benefit__center .ant-table-content .ant-table-thead tr th:last-child {
-  text-align: center;
-}
-.benefit__center .ant-table-content table .ant-table-tbody tr td {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 21px;
-  color: #6e6b7b;
-  padding: 25px 16px;
-  border-bottom: 2px solid #efefef;
-}
-
-.benefit__top-breadcrum {
-  font-weight: 400;
-  font-size: 11px;
-  line-height: 20px;
-}
-.benefit__action {
-  position: relative;
-  text-align: center;
-  cursor: pointer;
-}
-.benefit__action-menu {
-  display: flex;
-  z-index: 9999;
-  right: -16px;
-  top: 0;
-  flex-direction: column;
-}
-.benefit__action-menu {
-  .benefit__button {
-    margin-bottom: 15px;
-    margin-left: 15px;
-    margin-right: 15px;
+.benefit__container {
+  .benefit__center .ant-table-content .ant-table-thead tr th:last-child {
+    text-align: center;
   }
-  .benefit__button:first-child {
-    margin-top: 15px;
+  .benefit__center .ant-table-content table .ant-table-tbody tr td {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    color: #6e6b7b;
+    padding: 25px 16px;
+    border-bottom: 2px solid #efefef;
   }
-}
-.benefit__action-toggle {
-  width: fit-content;
-  margin: 0 auto;
-  cursor: pointer;
-}
-.ant-popover-inner {
-  padding: 0 !important;
-}
-.benefit__action-menu .ant-radio-button-wrapper,
-.benefit__action-menu .ant-radio-button {
-  border-radius: none !important;
-  border: unset;
-}
 
-.benefit__top-search-input input {
-  border-color: #555;
-}
-.benefit__top-search-input .ant-btn {
-  border-color: #555;
-}
-.benefit__top-modal-btn .button__text {
-  margin-right: 10px;
-}
-.benefit__top-right {
-  display: flex;
-  gap: 12px;
-  margin-bottom: 20px;
-}
-.benefit__top {
-  display: flex;
-  justify-content: flex-end;
-}
-.benefit__modal-list {
-  display: flex;
-  gap: 50px;
-}
-.benefit__modal-left .benefit__modal-item {
-  width: 245px;
-}
-.ant-modal-footer {
-  text-align: start !important;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
-  gap: 30px;
-}
-.ant-modal-footer button {
-  font-size: 16px;
-  line-height: 22px;
-}
-.benefit__modal-label {
-  font-size: 16px;
-  font-weight: 500;
-  margin: 10px 0;
-}
-.ant-modal-title {
-  text-transform: uppercase;
-}
-.benefit__modal-item input,
-.ant-select-selector {
-  height: 40px !important;
-  font-size: 16px !important;
-  line-height: 22px !important;
-  border-radius: 8px !important;
+  .benefit__top-breadcrum {
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 20px;
+  }
+  .benefit__action {
+    position: relative;
+    text-align: center;
+    cursor: pointer;
+  }
+  .benefit__action-menu {
+    display: flex;
+    z-index: 9999;
+    right: -16px;
+    top: 0;
+    flex-direction: column;
+  }
+  .benefit__action-menu {
+    .benefit__button {
+      margin-bottom: 15px;
+      margin-left: 15px;
+      margin-right: 15px;
+    }
+    .benefit__button:first-child {
+      margin-top: 15px;
+    }
+  }
+  .benefit__action-toggle {
+    width: fit-content;
+    margin: 0 auto;
+    cursor: pointer;
+  }
+  .ant-popover-inner {
+    padding: 0 !important;
+  }
+  .benefit__action-menu .ant-radio-button-wrapper,
+  .benefit__action-menu .ant-radio-button {
+    border-radius: none !important;
+    border: unset;
+  }
+
+  .benefit__top-search-input input {
+    border-color: #555;
+  }
+  .benefit__top-search-input .ant-btn {
+    border-color: #555;
+  }
+  .benefit__top-modal-btn .button__text {
+    margin-right: 10px;
+  }
+  .benefit__top-right {
+    display: flex;
+    gap: 12px;
+    margin-bottom: 20px;
+  }
+  .benefit__top {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .benefit__modal-list {
+    display: flex;
+    gap: 50px;
+  }
+  .benefit__modal-left .benefit__modal-item {
+    width: 245px;
+  }
+  .ant-modal-footer {
+    text-align: start !important;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    gap: 30px;
+  }
+  .ant-modal-footer button {
+    font-size: 16px;
+    line-height: 22px;
+  }
+  .benefit__modal-label {
+    font-size: 16px;
+    font-weight: 500;
+    margin: 10px 0;
+  }
+  .ant-modal-title {
+    text-transform: uppercase;
+  }
+  .benefit__modal-item input,
+  .ant-select-selector {
+    height: 40px !important;
+    font-size: 16px !important;
+    line-height: 22px !important;
+    border-radius: 8px !important;
+  }
 }
