--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -13,6 +13,7 @@
 }
 .overview__content-avatar{
     width: 30%;
+    max-height: calc(100vh - 200px);
     position: relative;
     display: flex;
     flex-direction: column;
