fix-bug-contract-page

--- a/src/pages/contract/contract.scss
+++ b/src/pages/contract/contract.scss
@@ -6,6 +6,8 @@
     display: flex;
     justify-content: space-between;
 }
-.check-icon{
-    color: green;
+.contract__search{
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 15px;
 }
