hotfix ui, add prefix for randomtext function

--- a/src/pages/employees/employees-page.scss
+++ b/src/pages/employees/employees-page.scss
@@ -86,6 +86,10 @@
         font-weight: bolder;
         margin-bottom: 12px;
     }
+
+    .custom__input-container {
+        margin-bottom: 6px;
+    }
 }
 
 .employees__action {
