--- a/src/pages/benefit/benefit-page.scss
+++ b/src/pages/benefit/benefit-page.scss
@@ -1,57 +1,21 @@
 .benefit__container {
   .benefit__center .ant-table-content .ant-table-thead tr th:last-child {
     text-align: center;
-  background: #ffffff;
-  border-radius: 6px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background: #ffffff;
+    border-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
-.benefit__center .ant-table-content .ant-table-thead tr th {
-  font-weight: 700;
-  font-size: 12px;
-  text-transform: uppercase;
-  line-height: 15px;
-  background: #f3f2f7;
-  color: #5e5873;
-  width: 20%;
-}
-.benefit__center .ant-table-content .ant-table-thead tr th:last-child {
-  text-align: center;
-}
-.benefit__center .ant-table-content table .ant-table-tbody tr td {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 21px;
-  color: #6e6b7b;
-  padding: 25px 16px;
-  border-bottom: 2px solid #efefef;
-}
-.benefit__top {
-  padding: 20px 16px;
-  display: flex !important;
-  justify-content: flex-end !important;
-}
-.benefit__top-breadcrum {
-  font-weight: 400;
-  font-size: 11px;
-  line-height: 20px;
-}
-.benefit__action {
-  position: relative;
-  text-align: center;
-  cursor: pointer;
-}
-.benefit__action-menu {
-  display: flex;
-  z-index: 9999;
-  right: -16px;
-  top: 0;
-  flex-direction: column;
-}
-.benefit__action-menu {
-  .benefit__button {
-    margin-bottom: 15px;
-    margin-left: 15px;
-    margin-right: 15px;
+  .benefit__center .ant-table-content .ant-table-thead tr th {
+    font-weight: 700;
+    font-size: 12px;
+    text-transform: uppercase;
+    line-height: 15px;
+    background: #f3f2f7;
+    color: #5e5873;
+    width: 20%;
+  }
+  .benefit__center .ant-table-content .ant-table-thead tr th:last-child {
+    text-align: center;
   }
   .benefit__center .ant-table-content table .ant-table-tbody tr td {
     font-weight: 400;
@@ -61,7 +25,12 @@
     padding: 25px 16px;
     border-bottom: 2px solid #efefef;
   }
-
+  .benefit__top {
+    padding: 20px 16px;
+    display: flex !important;
+    justify-content: flex-end !important;
+    padding-top: 0;
+  }
   .benefit__top-breadcrum {
     font-weight: 400;
     font-size: 11px;
@@ -70,7 +39,14 @@
   .benefit__action {
     position: relative;
     text-align: center;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    gap: 6px;
     cursor: pointer;
+  }
+  .action__edit {
+    margin-bottom: 0;
   }
   .benefit__action-menu {
     display: flex;
@@ -85,10 +61,103 @@
       margin-left: 15px;
       margin-right: 15px;
     }
-    .benefit__button:first-child {
-      margin-top: 15px;
+    .benefit__center .ant-table-content table .ant-table-tbody tr td {
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 21px;
+      color: #6e6b7b;
+      padding: 25px 16px;
+      border-bottom: 2px solid #efefef;
+    }
+
+    .benefit__top-breadcrum {
+      font-weight: 400;
+      font-size: 11px;
+      line-height: 20px;
+    }
+    .benefit__action {
+      position: relative;
+      text-align: center;
+      cursor: pointer;
+    }
+    .benefit__action-menu {
+      display: flex;
+      z-index: 9999;
+      right: -16px;
+      top: 0;
+      flex-direction: column;
+    }
+    .benefit__action-menu {
+      .benefit__button {
+        margin-bottom: 15px;
+        margin-left: 15px;
+        margin-right: 15px;
+      }
+      .benefit__button:first-child {
+        margin-top: 15px;
+      }
+    }
+    .benefit__action-toggle {
+      width: fit-content;
+      margin: 0 auto;
+      cursor: pointer;
+    }
+    .ant-popover-inner {
+      padding: 0 !important;
+    }
+    .benefit__action-menu .ant-radio-button-wrapper,
+    .benefit__action-menu .ant-radio-button {
+      border-radius: none !important;
+      border: unset;
+    }
+
+    .benefit__top-search-input input {
+      border-color: #555;
+    }
+    .benefit__top-search-input .ant-btn {
+      border-color: #555;
+    }
+    .benefit__top-modal-btn .button__text {
+      margin-right: 10px;
+    }
+    .benefit__top-right {
+      display: flex;
+      gap: 12px;
+      margin-bottom: 20px;
+    }
+    .benefit__top {
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    .ant-modal-footer {
+      text-align: start !important;
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: flex-end;
+      gap: 30px;
+    }
+    .ant-modal-footer button {
+      font-size: 16px;
+      line-height: 22px;
+    }
+    .benefit__modal-label {
+      font-size: 16px;
+      font-weight: 500;
+      margin: 10px 0;
+    }
+    .ant-modal-title {
+      text-transform: uppercase;
+    }
+    .benefit__modal-item input,
+    .ant-select-selector {
+      height: 40px !important;
+      font-size: 16px !important;
+      line-height: 22px !important;
+      border-radius: 8px !important;
     }
   }
+
   .benefit__action-toggle {
     width: fit-content;
     margin: 0 auto;
@@ -104,108 +173,27 @@
   }
 
   .benefit__top-search-input input {
-    border-color: #555;
+    border: 1px solid #000000;
   }
   .benefit__top-search-input .ant-btn {
-    border-color: #555;
-  }
-  .benefit__top-modal-btn .button__text {
-    margin-right: 10px;
+    border: 1px solid #000000;
   }
   .benefit__top-right {
     display: flex;
-    gap: 12px;
-    margin-bottom: 20px;
+    gap: 20px;
   }
   .benefit__top {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
   }
-  .benefit__modal-list {
-    display: flex;
-    gap: 50px;
-  }
-  .benefit__modal-left .benefit__modal-item {
-    width: 245px;
-  }
-  .ant-modal-footer {
-    text-align: start !important;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-end;
-    gap: 30px;
-  }
-  .ant-modal-footer button {
-    font-size: 16px;
-    line-height: 22px;
-  }
-  .benefit__modal-label {
-    font-size: 16px;
-    font-weight: 500;
-    margin: 10px 0;
-  }
-  .ant-modal-title {
-    text-transform: uppercase;
-  }
-  .benefit__modal-item input,
-  .ant-select-selector {
-    height: 40px !important;
-    font-size: 16px !important;
-    line-height: 22px !important;
-    border-radius: 8px !important;
-  }
-}
-.benefit__action-toggle {
-  width: fit-content;
-  margin: 0 auto;
-  cursor: pointer;
-}
-.ant-popover-inner {
-  padding: 0 !important;
-}
-.benefit__action-menu .ant-radio-button-wrapper,
-.benefit__action-menu .ant-radio-button {
-  border-radius: none !important;
-  border: unset;
-}
-
-.benefit__top-search-input input {
-  border: 1px solid #b9b9c3;
-  border-radius: 5px;
-  height: 38px;
-  font-size: 14px;
-  line-height: 24px;
-  padding-left: 15px;
-  color: #b9b9c3;
-}
-.benefit__top-search-input .ant-btn {
-  height: 38px;
-}
-
-.benefit__top-modal-btn {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 38px;
-  border-radius: 5px;
-  color: #ffffff;
-  text-align: center;
-  height: 38px;
-  padding: 0 22px;
-  margin-left: 15px;
-}
-.benefit__top-right {
-  display: flex;
-}
-.benefit__top {
-  display: flex;
-  justify-content: space-between;
 }
 .benefit__modal-list {
-  display: flex;
+  display: flex !important;
   gap: 50px;
+  margin-bottom: 25px;
 }
 .benefit__modal-left .benefit__modal-item {
-  width: 245px;
+  width: 304px;
 }
 .benefit__modal-label {
   font-size: 16px;
@@ -221,5 +209,4 @@
   font-size: 16px !important;
   line-height: 22px !important;
   border-radius: 8px !important;
-}
 }
