--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -1,10 +1,12 @@
 .default__layout-container {
     display: flex;
     height: 100vh;
+    overflow: hidden;
 
     .menu__side {
         width: 20%;
         height: 100%;
+        flex-shrink: 0;
         .side__menu-container {
             height: 100%;
             .ant-menu {
@@ -18,5 +20,6 @@
         height: 100%;
         padding: 15px 28px 0px;
         background-color: #f3f0f0;
+        max-width: 80%;
     }
 }
