--- a/src/pages/employees/employees-page.scss
+++ b/src/pages/employees/employees-page.scss
@@ -1,4 +1,5 @@
 .employees__container {
+    width: 100%;
   .employee__avatar {
     width: 50px;
     height: 50px;
@@ -61,6 +62,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    width: 100%;
 }
 
 .employee__status {
