fix bug, refactor

--- a/src/pages/benefit/benefit-page.scss
+++ b/src/pages/benefit/benefit-page.scss
@@ -210,3 +210,9 @@
   line-height: 22px !important;
   border-radius: 8px !important;
 }
+
+#benefit__modal-status {
+  .ant-select {
+    width: 100%;
+  }
+}
