fix bug input can not clear

--- a/src/pages/employees/employees-page.scss
+++ b/src/pages/employees/employees-page.scss
@@ -109,7 +109,8 @@
 .add__employees-selects {
     display: flex;
     gap: 20px;
-    margin-top: 35px;
+    margin-top: 20px;
+    flex-wrap: wrap;
 }
 
 .update__emp-container {
