fix by tester feedback

--- a/src/components/side-menu/side-menu.scss
+++ b/src/components/side-menu/side-menu.scss
@@ -17,6 +17,10 @@
         .ant-menu-item {
             &:hover {
                 background-color: var(--primary-color) !important;
+                color: black !important;
+            }
+            &.ant-menu-item-selected {
+                color: black;
             }
         }
     }
