--- a/src/pages/employees/employees-page.scss
+++ b/src/pages/employees/employees-page.scss
@@ -108,9 +108,14 @@
 
 .add__employees-selects {
     display: flex;
-    gap: 20px;
     margin-top: 20px;
     flex-wrap: wrap;
+}
+
+.add__employees-selectts {
+    .ant-select {
+        width: 100%;
+    }
 }
 
 .update__emp-container {
